[package]
name = "libra-cached-packages"
description = "Builds framework packages for caching in builds and tests"
version = { workspace = true }

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bcs = { workspace = true }
# Note the generated SDK code uses hard coded `diemtypes`
diem-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "416d1ca" }
move-core-types = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
libra-framework = { workspace = true }
