[package]
name = "libra-cached-packages"
description = "Builds framework packages for caching in builds and tests"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bcs = { workspace = true }
diem-types = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
libra-framework = { workspace = true }

[features]
# hack. the framework sdk generated code inserts this feature
fuzzing = []
