[package]
name = "libra-twin-tests"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }

publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }

diem-config = { workspace = true, features = ["testing"] }
diem-forge = { workspace = true, features = ["testing"] }
diem-genesis = { workspace = true, features = ["testing"] }
diem-logger = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }

fs_extra = { workspace = true }

hex = { workspace = true }
libra-config = { workspace = true }
libra-framework = { workspace = true }
libra-query = { workspace = true }
libra-rescue = { workspace = true }
libra-smoke-tests = { workspace = true, features = ["testing"] }
libra-txs = { workspace = true }
libra-types = { workspace = true }
serde_yaml = { workspace = true }
smoke-test = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
diem-api-types = { workspace = true }
diem-logger = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
smoke-test = { workspace = true }
