[package]
name = "libra"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

libra-config = { workspace = true }
libra-query = { workspace = true }
libra-tower = { workspace = true }
libra-txs = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }

diem = { workspace = true }
diem-config = { workspace = true }
diem-node = { workspace = true }