[package]
name = "libra"
build = "build.rs"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
diem = { workspace = true }
diem-config = { workspace = true }
diem-node = { workspace = true }
diem-vm = { workspace = true }
libra-config = { workspace = true }
libra-framework = { workspace = true }
libra-genesis-tools = { workspace = true }
libra-query = { workspace = true }
libra-rescue = { workspace = true }
libra-storage = { workspace = true }
libra-txs = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }

[features]
testing = ["diem-vm/testing"]
