[package]
name = "libra-config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
dialoguer = { workspace = true }

libra-types = { workspace = true }
libra-wallet = { workspace = true }

zapatos = { workspace = true }
zapatos-rest-client = { workspace = true }
zapatos-crypto = { workspace = true }
zapatos-types = { workspace = true }
zapatos-genesis = { workspace = true }
zapatos-config = { workspace = true }


