[package]
name = "libra-config"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
diem = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-genesis = { workspace = true }
diem-rest-client = { workspace = true }
diem-types = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-temppath = { workspace = true }
