[package]
name = "libra-genesis-tools"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


anyhow = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }

libra-framework = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
libra-config = { workspace = true }

diem-db = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-executor = { workspace = true }
diem-framework = { workspace = true }
diem-gas = { workspace = true }
diem-genesis = { workspace = true }
diem-github-client = { workspace = true }
diem-state-view = { workspace = true }
diem-storage-interface = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
diem-vm-genesis = { workspace = true }

move-core-types = { workspace = true }

[dev-dependencies]
diem-sdk = { workspace = true }

