[package]
name = "libra-genesis-tools"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]

anyhow = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-db = { workspace = true }
diem-executor = { workspace = true }
diem-framework = { workspace = true }
diem-gas = { workspace = true }
diem-genesis = { workspace = true }
diem-github-client = { workspace = true }
diem-logger = { workspace = true }
diem-state-view = { workspace = true }
diem-storage-interface = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true }
diem-vm-genesis = { workspace = true }
indicatif = { workspace = true }
libra-backwards-compatibility = { workspace = true }
libra-config = { workspace = true }
libra-framework = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
move-core-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
libra-backwards-compatibility = { workspace = true }
