[package]
name = "libra-node"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-config = { workspace = true }
diem-node = { workspace = true }
libra-types = { workspace = true }
clap = { workspace = true }
