[package]
name = "libra-query"
version = { workspace = true }

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
diem-debugger = { workspace = true }
diem-sdk = { workspace = true }
diem-types = { workspace = true }
diem-api-types = { workspace = true }
indoc = { workspace = true }
libra-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
libra-smoke-tests = { workspace = true }
hex = { workspace = true }
