[package]
name = "rescue"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }

diem-config = { workspace = true , features = ["testing"] }
diem-crypto = { workspace = true }
diem-db = { workspace = true }
diem-gas = { workspace = true , features = ["testing"] }
diem-executor = { workspace = true }
diem-logger = { workspace = true }
diem-storage-interface = { workspace = true}
diem-types = { workspace = true}
diem-vm = { workspace = true , features = ["testing"] }
diem-vm-types = { workspace = true }

fs_extra = { workspace = true }
futures-util = { workspace = true }
libra-smoke-tests = { workspace = true, features = ["testing"] }
libra-framework = { workspace = true }
libra-txs = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-vm-runtime= {workspace = true, features = ["testing"] }
tokio = { workspace = true , features = ["full"] }
diem-temppath = { workspace = true }
diem-api-types = { workspace = true }
diem-forge = { workspace = true , features = ["testing"] }
libra-wallet = { workspace = true}
diem-genesis = { workspace = true, features = ["testing"] }
libra-config = { workspace = true}
libra-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true}
libra-query = { workspace = true}
reqwest = { workspace = true }

hex = { workspace = true }
smoke-test = { workspace = true }
serde_json = {workspace = true }


[dev-dependencies]
diem-api-types = { workspace = true }
diem-logger = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
smoke-test = { workspace = true }
