[package]
name = "rescue"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
diem-api-types = { workspace = true }

diem-config = { workspace = true, features = ["testing"] }
diem-crypto = { workspace = true }
diem-db = { workspace = true }
diem-executor = { workspace = true }
diem-forge = { workspace = true, features = ["testing"] }
diem-gas = { workspace = true, features = ["testing"] }
diem-genesis = { workspace = true, features = ["testing"] }
diem-logger = { workspace = true }
diem-storage-interface = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-vm = { workspace = true, features = ["testing"] }
diem-vm-types = { workspace = true }

fs_extra = { workspace = true }
futures-util = { workspace = true }

hex = { workspace = true }
libra-config = { workspace = true }
libra-framework = { workspace = true }
libra-query = { workspace = true }
libra-smoke-tests = { workspace = true, features = ["testing"] }
libra-txs = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
smoke-test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
storage = { path = "../storage" }

[dev-dependencies]
diem-api-types = { workspace = true }
diem-logger = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
smoke-test = { workspace = true }
