[package]
name = "storage"
version = { workspace = true }

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
diem-api-types = { workspace = true }
diem-backup-cli = { workspace = true }
diem-db-tool = { workspace = true }
diem-logger = { workspace = true }
diem-push-metrics = { workspace = true }
diem-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
libra-types = { workspace = true }
