[package]
name = "libra-storage"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
diem-backup-cli = { workspace = true }
diem-config = { workspace = true }
diem-db = { workspace = true }
diem-db-tool = { workspace = true }
diem-executor-types = { workspace = true }
diem-logger = { workspace = true }
diem-push-metrics = { workspace = true }
diem-types = { workspace = true }
glob = { workspace = true }
libra-backwards-compatibility = { workspace = true }
num_cpus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
diem-temppath = { workspace = true }
