[package]
name = "libra-tower"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

libra-query = { workspace = true }
libra-types = { workspace = true }
libra-txs = { workspace = true }
libra-wallet = { workspace = true }
vdf = { workspace = true }

diem-sdk = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
url = { workspace = true }

libra-framework = { workspace = true }
libra-smoke-tests = { workspace = true }

diem-forge = { workspace = true }
smoke-test = { workspace = true }
diem-temppath = { workspace = true }

