[package]
name = "libra-tower"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
diem-sdk = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
libra-query = { workspace = true }
libra-txs = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
vdf = { workspace = true }

[dev-dependencies]
diem-temppath = { workspace = true }
libra-smoke-tests = { workspace = true }
