[package]
name = "libra-txs"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
diem = { workspace = true }
diem-framework = { workspace = true }
diem-genesis = { workspace = true }
diem-logger = { workspace = true }
diem-sdk = { workspace = true }
diem-types = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
libra-cached-packages = { workspace = true }
libra-query = { workspace = true }
libra-types = { workspace = true }
libra-wallet = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
diem-temppath = { workspace = true }
libra-framework = { workspace = true }
libra-smoke-tests = { workspace = true }
