[package]
name = "libra-wallet"
version = "0.1.0"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
clap = { workspace = true }
dirs = { workspace = true }
dialoguer = { workspace = true }
serde_yaml = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
blst = { workspace = true }
zapatos-types = { workspace = true }
zapatos-crypto = { workspace = true }
zapatos-keygen = { workspace = true }
zapatos-genesis = { workspace = true }
zapatos-config = { workspace = true }
ol-keys = { workspace = true }
diem-wallet = { workspace = true }
indoc = { workspace = true }
tokio = { workspace = true }
