[package]
name = "libra-wallet"
version = "0.1.0"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]

anyhow = { workspace = true }
blst = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
# dirs = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
indoc = { workspace = true }
mirai-annotations = { workspace = true }
rand = { workspace = true }
pbkdf2 = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

libra-types = { workspace = true }

zapatos-types = { workspace = true }
zapatos-crypto = { workspace = true }
zapatos-genesis = { workspace = true }
zapatos-config = { workspace = true }




# TODO remove these
# ol-keys = { workspace = true }
# diem-wallet = { workspace = true }
