[package]
name = "libra-wallet"
version = { workspace = true }

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]

anyhow = { workspace = true }
blst = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
diem-config = { workspace = true }
diem-crypto = { workspace = true }
diem-genesis = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
indoc = { workspace = true }
libra-types = { workspace = true }
mirai-annotations = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
